--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -5,4 +5,4 @@ do.jlink=false
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
-user.properties.file=C:\\Users\\Usuario\\AppData\\Roaming\\NetBeans\\18\\build.properties
+user.properties.file=/home/estudiante/snap/netbeans/69/build.properties
